[metadata]
name = uctt
version = 0.4.1
description = Universal cluster testing toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/james-nesbitt/uctt
author = James Nesbitt
author_email = james.r.nesbitt@gmail.com
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = test, unittest
project_urls =
    Source=https://github.com/james-nesbitt/uctt

[options]
packages =
    uctt
    uctt.contrib.common
    uctt.contrib.dummy
    uctt.contrib.docker
    uctt.contrib.kubernetes
    uctt.contrib.terraform
include_package_data = True
install_requires =
    configerus>=0.3.2
    pyyaml
    docker
    kubernetes==17.14.0a1

[options.packages.find]
where=src

[options.entry_points]
configerus.bootstrap =
    uctt_common      = uctt.contrib.common:bootstrap
    uctt_docker      = uctt.contrib.docker:bootstrap
    uctt_dummy       = uctt.contrib.dummy:bootstrap
    uctt_kubernetes  = uctt.contrib.kubernetes:bootstrap
    uctt_terraform   = uctt.contrib.terraform:bootstrap
uctt.bootstrap =
    uctt_common      = uctt.contrib.common:bootstrap
    uctt_docker      = uctt.contrib.docker:bootstrap
    uctt_dummy       = uctt.contrib.dummy:bootstrap
    uctt_kubernetes  = uctt.contrib.kubernetes:bootstrap
    uctt_terraform   = uctt.contrib.terraform:bootstrap
